syntax = "proto3";
option go_package = "pb";


enum CountryCode {
    NA                             = 0;

    AFGHANISTAN                    = 1;
    ALAND_ISLANDS                  = 2;
    ALBANIA                        = 3;
    ALGERIA                        = 4;
    AMERICAN_SAMOA                 = 5;
    ANDORRA                        = 6;
    ANGOLA                         = 7;
    ANGUILLA                       = 8;
    ANTIGUA                        = 9;

    ARGENTINA                      = 10;
    ARMENIA                        = 11;
    ARUBA                          = 12;
    AUSTRALIA                      = 13;
    AUSTRIA                        = 14;
    AZERBAIJAN                     = 15;
    BAHAMAS                        = 16;
    BAHRAIN                        = 17;
    BANGLADESH                     = 18;
    BARBADOS                       = 19;

    BELARUS                        = 20;
    BELGIUM                        = 21;
    BELIZE                         = 22;
    BENIN                          = 23;
    BERMUDA                        = 24;
    BHUTAN                         = 25;
    BOLIVIA                        = 26;
    BONAIRE_SINT_EUSTATIUS_SABA    = 27;
    BOSNIA                         = 28;
    BOTSWANA                       = 29;

    BOUVET_ISLAND                  = 30;
    BRAZIL                         = 31;
    BRITISH_INDIAN_OCEAN_TERRITORY = 32;
    BRUNEI_DARUSSALAM              = 33;
    BULGARIA                       = 34;
    BURKINA_FASO                   = 35;
    BURUNDI                        = 36;
    CABO_VERDE                     = 37;
    CAMBODIA                       = 38;
    CAMEROON                       = 39;

    CANADA                         = 40;
    CAYMAN_ISLANDS                 = 41;
    CENTRAL_AFRICAN_REPUBLIC       = 42;
    CHAD                           = 43;
    CHILE                          = 44;
    CHINA                          = 45;
    CHRISTMAS_ISLAND               = 46;
    COCOS_ISLANDS                  = 47;
    COLOMBIA                       = 48;
    COMOROS                        = 49;

    CONGO_REPUBLIC                 = 50;
    CONGO                          = 51;
    COOK_ISLANDS                   = 52;
    COSTA_RICA                     = 53;
    COTE_DIVOIRE                   = 54;
    CROATIA                        = 55;
    CUBA                           = 56;
    CURACAO                        = 57;
    CYPRUS                         = 58;
    CZECH_REPUBLIC                 = 59;

    DENMARK                        = 60;
    DJIBOUTI                       = 61;
    DOMINICA                       = 62;
    DOMINICAN_REPUBLIC             = 63;
    ECUADOR                        = 64;
    EGYPT                          = 65;
    EL_SALVADOR                    = 66;
    EQUATORIAL_GUINEA              = 67;
    ERITREA                        = 68;
    ESTONIA                        = 69;

    ETHIOPIA                       = 70;
    FALKLAND_ISLANDS               = 71;
    FAROE_ISLANDS                  = 72;
    FIJI                           = 73;
    FINLAND                        = 74;
    FRANCE                         = 75;
    FRENCH_GUIANA                  = 76;
    FRENCH_POLYNESIA               = 77;
    FRENCH_SOUTHERN_TERRITORIES    = 78;
    GABON                          = 79;

    GAMBIA                         = 80;
    GEORGIA                        = 81;
    GERMANY                        = 82;
    GHANA                          = 83;
    GIBRALTAR                      = 84;
    GREECE                         = 85;
    GREENLAND                      = 86;
    GRENADA                        = 87;
    GUADELOUPE                     = 88;
    GUAM                           = 89;

    GUATEMALA                      = 90;
    GUERNSEY                       = 91;
    GUINEA                         = 92;
    GUINEA_BISSAU                  = 93;
    GUYANA                         = 94;
    HAITI                          = 95;
    HEARD_ISLAND                   = 96;
    HOLY_SEE                       = 97;
    HONDURAS                       = 98;
    HONG_KONG                      = 99;

    HUNGARY                        = 100;
    ICELAND                        = 101;
    INDIA                          = 102;
    INDONESIA                      = 103;
    IRAN                           = 104;
    IRAQ                           = 105;
    IRELAND                        = 106;
    ISLE_OF_MAN                    = 107;
    ISRAEL                         = 108;
    ITALY                          = 109;

    JAMAICA                        = 110;
    JAPAN                          = 111;
    JERSEY                         = 112;
    JORDAN                         = 113;
    KAZAKHSTAN                     = 114;
    KENYA                          = 115;
    KIRIBATI                       = 116;
    NORTH_KOREA                    = 117;
    SOUTH_KOREA                    = 118;
    KUWAIT                         = 119;

    KYRGYZSTAN                     = 120;
    LAO                            = 121;
    LATVIA                         = 122;
    LEBANON                        = 123;
    LESOTHO                        = 124;
    LIBERIA                        = 125;
    LIBYA                          = 126;
    LIECHTENSTEIN                  = 127;
    LITHUANIA                      = 128;
    LUXEMBOURG                     = 129;

    MACAO                          = 130;
    MACEDONIA                      = 131;
    MADAGASCAR                     = 132;
    MALAWI                         = 133;
    MALAYSIA                       = 134;
    MALDIVES                       = 135;
    MALI                           = 136;
    MALTA                          = 137;
    MARSHALL_ISLANDS               = 138;
    MARTINIQUE                     = 139;

    MAURITANIA                     = 140;
    MAURITIUS                      = 141;
    MAYOTTE                        = 142;
    MEXICO                         = 143;
    MICRONESIA                     = 144;
    MOLDOVA                        = 145;
    MONACO                         = 146;
    MONGOLIA                       = 147;
    MONTENEGRO                     = 148;
    MONTSERRAT                     = 149;

    MOROCCO                        = 150;
    MOZAMBIQUE                     = 151;
    MYANMAR                        = 152;
    NAMIBIA                        = 153;
    NAURU                          = 154;
    NEPAL                          = 155;
    NETHERLANDS                    = 156;
    NEW_CALEDONIA                  = 157;
    NEW_ZEALAND                    = 158;
    NICARAGUA                      = 159;

    NIGER                          = 160;
    NIGERIA                        = 161;
    NIUE                           = 162;
    NORFOLK_ISLAND                 = 163;
    NORTHERN_MARIANA_ISLANDS       = 164;
    NORWAY                         = 165;
    OMAN                           = 166;
    PAKISTAN                       = 167;
    PALAU                          = 168;
    PANAMA                         = 169;

    PAPUA_NEW_GUINEA               = 170;
    PARAGUAY                       = 171;
    PERU                           = 172;
    PHILIPPINES                    = 173;
    PITCAIRN                       = 174;
    POLAND                         = 175;
    PORTUGAL                       = 176;
    PUERTO_RICO                    = 177;
    QATAR                          = 178;
    REUNION                        = 179;

    ROMANIA                        = 180;
    RUSSIA                         = 181;
    RWANDA                         = 182;
    SAINT_BARTHELEMY               = 183;
    SAINT_HELENA                   = 184;
    SAINT_KITTS                    = 185;
    SAINT_LUCIA                    = 186;
    SAINT_MARTIN                   = 187;
    SAINT_PIERRE                   = 188;
    SAINT_VINCENT                  = 189;

    SAMOA                          = 190;
    SAN_MARINO                     = 191;
    SAO_TOME                       = 192;
    SAUDI_ARABIA                   = 193;
    SENEGAL                        = 194;
    SERBIA                         = 195;
    SEYCHELLES                     = 196;
    SIERRA_LEONE                   = 197;
    SINGAPORE                      = 198;
    SINT_MAARTEN                   = 199;

    SUCRE                          = 200;
    SLOVAKIA                       = 201;
    SLOVENIA                       = 202;
    SOLOMON_ISLANDS                = 203;
    SOMALIA                        = 204;
    SOUTH_AFRICA                   = 205;
    SOUTH_SUDAN                    = 206;
    SPAIN                          = 207;
    SRI_LANKA                      = 208;
    SUDAN                          = 209;

    SURINAME                       = 210;
    SVALBARD                       = 211;
    ESWATINI                       = 212;
    SWEDEN                         = 213;
    SWITZERLAND                    = 214;
    SYRIAN_ARAB_REPUBLIC           = 215;
    TAIWAN                         = 216;
    TAJIKISTAN                     = 217;
    TANZANIA                       = 218;
    THAILAND                       = 219;

    TIMOR_LESTE                    = 220;
    TOGO                           = 221;
    TOKELAU                        = 222;
    TONGA                          = 223;
    TRINIDAD                       = 224;
    TUNISIA                        = 225;
    TURKEY                         = 226;
    TURKMENISTAN                   = 227;
    TURKS_AND_CAICOS_ISLANDS       = 228;
    TUVALU                         = 229;

    UGANDA                         = 230;
    UKRAINE                        = 231;
    UNITED_ARAB_EMIRATES           = 232;
    UNITED_KINGDOM                 = 233;
    UNITED_STATES                  = 234;
    URUGUAY                        = 235;
    UZBEKISTAN                     = 236;
    VANUATU                        = 237;
    VENEZUELA                      = 238;
    VIETNAM                        = 239;

    VIRGIN_ISLANDS_BRITISH         = 240;
    VIRGIN_ISLANDS_US              = 241;
    WALLIS_AND_FUTUNA              = 242;
    WESTERN_SAHARA                 = 243;
    YEMEN                          = 244;
    ZAMBIA                         = 245;
    ZIMBABWE                       = 246;
    UNITED_STATES_MINOR_ISLANDS    = 247;

    ALL                            = 500;
    AFRICA                         = 501;
    ASIA                           = 502;
    CENTRAL_AMERICA                = 503;
    EUROPE                         = 504;
    MIDDLE_EAST                    = 505;
    NORTH_AMERICA                  = 506;
    SOUTH_AMERICA                  = 507;
    OCEANIA                        = 508;
}
